k8s-kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-converter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currency-converter
  template:
    metadata:
      labels:
        app: currency-converter
    spec:
      containers:
      - name: currency-converter
        image: 538153606685.dkr.ecr.us-east-1.amazonaws.com/currency_converter:v1
        ports:
        - containerPort: 5555
