k8s-kustomize/base/frontend-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          # Skaffold will dynamically inject the real ECR URL here
          image: frontend-image
          ports:
            - containerPort: 80

          # Production Resource Limits
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"

          # Nginx Health Probes
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 5

  strategy:
    blueGreen:
      activeService: frontend-active-svc
      previewService: frontend-preview-svc
      autoPromotionEnabled: false
