k8s-kustomize/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

#------ General Deployment.yaml :what you want to deploy [SAME AS BEFORE]
metadata:
  name: currency-converter
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: currency-converter
  template: 
    metadata:
      labels:
        app: currency-converter
    spec:
      containers:
      - name: currency-converter
        image: 538153606685.dkr.ecr.us-east-1.amazonaws.com/currencyconverter:v1
        ports:
        - containerPort: 5555
  strategy:
    blueGreen: 
      # The service for live traffic
      activeService: currency-converter-active-svc
      # The service for internal QA testing
      previewService: currency-converter-preview-svc
      # Pause the rollout for manual promotion
      autoPromotionEnabled: false
