k8s-kustomize/base/ingress.yaml
# k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-main-ingress # Renamed for clarity
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: shared-ingress-group 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    # Rule for the Currency Converter Application
    - host: app.trialphase.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: currency-converter-active-svc #<------ CHange is here, we need to make sure that 
                                                    #currency-converter-active-svc points to --> app.trialphase.shop 
                port:
                  number: 80
