k8s-kustomize/base/preview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-preview-ingress # A different name for the preview Ingress

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: shared-ingress-group 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
  - host: appdev.trialphase.shop # The unique hostname for preview/testing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # IMPORTANT: This Ingress points to the previewService --> appdev.trialphase.shop
            name: currency-converter-preview-svc 
            port:
              number: 80
